--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="./public/favicon.png" type="image/png">
     <title>Lepage-Stone</title>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="./CSS/output.css">
   </head>
   <body>
- <nav class="bg-gray-100">
+ <nav class="bg-gray-100 mb-100">
   <div class="mx-auto max-w-7xl px-2 sm:px-6 lg:px-8 ">
     <div class="relative flex h-16 items-center justify-between">
       <div class="absolute inset-y-0 left-0 flex items-center sm:hidden">
@@ -54,5 +55,12 @@
     </div>
   </div>
 </nav>
+<div class="bg-gray-200 flex items-center justify-center py-4">
+  <span class="text-gray-800 text-lg font-semibold mr-10">Votre spécialiste Grand-est</span>
+  <a href="index.html">
+    <img class="h-auto w-auto" src="./public/logo.png" alt="Logo">
+  </a>
+  <span class="text-gray-800 text-lg font-semibold ml-10">en plan de travail de cuisine</span>
+</div>
   </body>
 </html>
