--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="./CSS/output.css">
   </head>
   <body>
- <nav class="bg-gray-100 mb-100">
+ <nav class="bg-gray-100">
   <div class="mx-auto max-w-7xl px-2 sm:px-6 lg:px-8 ">
     <div class="relative flex h-16 items-center justify-between">
       <div class="absolute inset-y-0 left-0 flex items-center sm:hidden">
@@ -25,7 +25,7 @@
           <img class="block h-8 w-auto lg:hidden" src="./public/logo.png" alt="Your Company">
           <img class="hidden h-8 w-auto lg:block" src="./public/logo.png" alt="Your Company">
         </div>
-        <div class="mx-auto hidden sm:ml-6 sm:block">
+        <div class="mx-auto hidden sm:ml-6 sm:block  mb-100">
           <div class="mx-auto space-x-4">
             <!-- Current: "bg-[#d9507e] text-white", Default: "text-gray-300 hover:bg-gray-700 hover:text-white" -->
             <a href="./index.html" class="bg-[#d9507e] text-white rounded-md px-3 py-2 text-sm font-medium" aria-current="page">Acceuil</a>
@@ -55,12 +55,12 @@
     </div>
   </div>
 </nav>
-<div class="bg-gray-200 flex items-center justify-center py-4">
-  <span class="text-gray-800 text-lg font-semibold mr-10">Votre spécialiste Grand-est</span>
+<div class="bg-gray-500 flex items-center justify-center py-4 mt-20">
+  <span class="text-[#d9507e] text-lg font-semibold mr-10">Votre spécialiste Grand-est</span>
   <a href="index.html">
     <img class="h-auto w-auto" src="./public/logo.png" alt="Logo">
   </a>
-  <span class="text-gray-800 text-lg font-semibold ml-10">en plan de travail de cuisine</span>
+  <span class="text-[#d9507e] text-lg font-semibold ml-10">en plan de travail de cuisine</span>
 </div>
   </body>
 </html>
