Refonte banniere-menu

--- a/index.html
+++ b/index.html
@@ -10,7 +10,14 @@
     <link rel="stylesheet" href="./CSS/output.css">
   </head>
   <body>
- <nav class="bg-gray-100">
+    <div class="bg-gray-100 flex flex-col items-center justify-center h-screen text-[#d9507e]">
+      <span id="text-banniere" class="text-[#d9507e] text-lg font-semibold">Votre spécialiste Grand-est</span>
+      <div class="flex items-center justify-center mt-4">
+        <img class="h-auto w-auto" src="./public/logo.png" alt="Logo">
+      </div>
+      <span id="text-banniere" class="text-[#d9507e] text-lg font-semibold">en plan de travail de cuisine</span>
+    </div>    
+ <nav class="bg-gray-100 flex flex-col items-center justify-center h-screen text-[#d9507e]">
   <div class="mx-auto max-w-7xl px-2 sm:px-6 lg:px-8 ">
     <div class="relative flex h-16 items-center justify-between">
       <div class="absolute inset-y-0 left-0 flex items-center sm:hidden">
@@ -55,12 +62,6 @@
     </div>
   </div>
 </nav>
-<div class="bg-gray-500 flex items-center justify-center py-4 mt-20">
-  <span class="text-[#d9507e] text-lg font-semibold mr-10">Votre spécialiste Grand-est</span>
-  <a href="index.html">
-    <img class="h-auto w-auto" src="./public/logo.png" alt="Logo">
-  </a>
-  <span class="text-[#d9507e] text-lg font-semibold ml-10">en plan de travail de cuisine</span>
-</div>
+
   </body>
 </html>
