--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="./CSS/output.css">
   </head>
   <body>
-    <div class="bg-gray-100 flex flex-col items-center justify-center h-screen text-[#d9507e]">
+    <div class="bg-gray-100 flex flex-col items-center justify-center h-screen text-[#d9507e] mx-auto">
       <span id="text-banniere" class="text-[#d9507e] text-lg font-semibold">Votre spécialiste Grand-est</span>
       <div class="flex items-center justify-center mt-4">
         <img class="h-auto w-auto" src="./public/logo.png" alt="Logo">
