Test for mobile

--- a/realisation.html
+++ b/realisation.html
@@ -9,12 +9,12 @@
     <link rel="stylesheet" href="./CSS/output.css">
   </head>
   <body>
-    <div class="bg-gray-100 flex flex-col items-center justify-center h-screen text-[#d9507e]">
-      <span class="text-[#d9507e] text-lg font-semibold">Votre spécialiste Grand-est</span>
+    <div class="bg-gray-100 flex flex-col items-center justify-center h-screen text-[#d9507e] mx-auto">
+      <span id="text-banniere" class="text-[#d9507e] text-lg font-semibold mx-auto">Votre spécialiste Grand-est</span>
       <div class="flex items-center justify-center mt-4">
         <img class="h-auto w-auto" src="./public/logo.png" alt="Logo">
       </div>
-      <span class="text-[#d9507e] text-lg font-semibold">en plan de travail de cuisine</span>
+      <span id="text-banniere" class="text-[#d9507e] text-lg font-semibold mx-auto">en plan de travail de cuisine</span>
     </div>    
  <nav class="bg-gray-100 flex flex-col items-center justify-center h-screen text-[#d9507e]">
   <div class="mx-auto max-w-7xl px-2 sm:px-6 lg:px-8 ">
