--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
   </head>
   <body>
     <div class="bg-gray-100 flex flex-col items-center justify-center h-screen text-[#d9507e] mx-auto">
-      <span id="text-banniere" class="text-[#d9507e] text-lg font-semibold">Votre spécialiste Grand-est</span>
+      <span id="text-banniere" class="text-[#d9507e] text-lg font-semibold text-center">Votre spécialiste Grand-est</span>
       <div class="flex items-center justify-center mt-4">
-        <img class="h-auto w-auto" src="./public/logo.png" alt="Logo">
+        <img class="h-auto w-auto mx-auto" src="./public/logo.png" alt="Logo">
       </div>
-      <span id="text-banniere" class="text-[#d9507e] text-lg font-semibold">en plan de travail de cuisine</span>
+      <span id="text-banniere" class="text-[#d9507e] text-lg font-semibold text-center">en plan de travail de cuisine</span>
     </div>    
  <nav class="bg-gray-100 flex flex-col items-center justify-center h-screen text-[#d9507e]">
-  <div class="mx-auto max-w-7xl px-2 sm:px-6 lg:px-8 ">
+  <div class="max-w-7xl px-2 sm:px-6 lg:px-8 ">
     <div class="relative flex h-16 items-center justify-between">
       <div class="absolute inset-y-0 left-0 flex items-center sm:hidden">
         <!-- Mobile menu button-->
