--- a/index.html
+++ b/index.html
@@ -11,30 +11,22 @@
   </head>
   <body>
     <div class="bg-gray-100 flex flex-col items-center justify-center h-screen text-[#d9507e] mx-auto">
-      <span id="text-banniere" class="text-[#d9507e] text-lg font-semibold text-center">Votre spécialiste Grand-est</span>
+      <span id="text-banniere" class="hidden lg:block text-[#d9507e] text-lg font-bold text-center">Votre spécialiste Grand-est</span>
       <div class="flex items-center justify-center mt-4">
         <img class="h-auto w-auto mx-auto" src="./public/logo.png" alt="Logo">
       </div>
-      <span id="text-banniere" class="text-[#d9507e] text-lg font-semibold text-center">en plan de travail de cuisine</span>
-    </div>    
+      <span id="text-banniere" class="hidden lg:block text-[#d9507e] text-lg font-bold text-center">en plan de travail de cuisine</span>
+    </div>
+    
  <nav class="bg-gray-100 flex flex-col items-center justify-center h-screen text-[#d9507e]">
   <div class="max-w-7xl px-2 sm:px-6 lg:px-8 ">
     <div class="relative flex h-16 items-center justify-between">
-      <div class="absolute inset-y-0 left-0 flex items-center sm:hidden">
-        <!-- Mobile menu button-->
-        <button type="button" class="inline-flex items-center justify-center rounded-md p-2 text-gray-400 hover:bg-gray-700 hover:text-white focus:outline-none focus:ring-2 focus:ring-inset focus:ring-white" aria-controls="mobile-menu" aria-expanded="false">
-          <span class="sr-only">Menu</span>
-          
-        </button>
-      </div>
       <div class="mx-auto flex flex-1 items-center justify-center sm:items-stretch sm:justify-start">
         <div class="flex flex-shrink-0 items-center">
-          <img class="block h-8 w-auto lg:hidden" src="./public/logo.png" alt="Your Company">
           <img class="hidden h-8 w-auto lg:block" src="./public/logo.png" alt="Your Company">
         </div>
         <div class="mx-auto hidden sm:ml-6 sm:block  mb-100">
           <div class="mx-auto space-x-4">
-            <!-- Current: "bg-[#d9507e] text-white", Default: "text-gray-300 hover:bg-gray-700 hover:text-white" -->
             <a href="./index.html" class="bg-[#d9507e] text-white rounded-md px-3 py-2 text-sm font-medium" aria-current="page">Acceuil</a>
             <a href="./materiaux.html" class="text-gray-400 hover:bg-[#d9507e] opacity-70 hover:text-white rounded-md px-3 py-2 text-sm font-medium">Matériaux</a>
             <a href="./deroulement.html" class="text-gray-400 hover:bg-[#d9507e] opacity-70 hover:text-white rounded-md px-3 py-2 text-sm font-medium">Déroulement</a>
