--- a/index.html
+++ b/index.html
@@ -17,43 +17,54 @@
       </div>
       <span id="text-banniere" class="hidden lg:block text-[#d9507e] text-lg font-bold text-center">en plan de travail de cuisine</span>
     </div>
-    
- <nav class="bg-gray-100 flex flex-col items-center justify-center h-screen text-[#d9507e]">
-  <div class="max-w-7xl px-2 sm:px-6 lg:px-8 ">
-    <div class="relative flex h-16 items-center justify-between">
-      <div class="mx-auto flex flex-1 items-center justify-center sm:items-stretch sm:justify-start">
-        <div class="flex flex-shrink-0 items-center">
-          <img class="hidden h-8 w-auto lg:block" src="./public/logo.png" alt="Your Company">
-        </div>
-        <div class="mx-auto hidden sm:ml-6 sm:block  mb-100">
-          <div class="mx-auto space-x-4">
-            <a href="./index.html" class="bg-[#d9507e] text-white rounded-md px-3 py-2 text-sm font-medium" aria-current="page">Acceuil</a>
-            <a href="./materiaux.html" class="text-gray-400 hover:bg-[#d9507e] opacity-70 hover:text-white rounded-md px-3 py-2 text-sm font-medium">Matériaux</a>
-            <a href="./deroulement.html" class="text-gray-400 hover:bg-[#d9507e] opacity-70 hover:text-white rounded-md px-3 py-2 text-sm font-medium">Déroulement</a>
-            <a href="./realisation.html" class="text-gray-400 hover:bg-[#d9507e] opacity-70 hover:text-white rounded-md px-3 py-2 text-sm font-medium">Réalisations</a>
-            <a href="./entreprise.html" class="text-gray-400 hover:bg-[#d9507e] opacity-70 hover:text-white rounded-md px-3 py-2 text-sm font-medium">L'entreprise</a>
-            <a href="./contact.html" class="text-gray-400 hover:bg-[#d9507e] opacity-70 hover:text-white rounded-md px-3 py-2 text-sm font-medium">Contact</a>
-            <a href="./boutique.html" class="text-gray-400 hover:bg-[#d9507e] opacity-70 hover:text-white rounded-md px-3 py-2 text-sm font-medium">Boutique</a>
+  <nav class="bg-gray-100 flex flex-col items-center justify-center h-screen text-[#d9507e]">
+    <div class="max-w-7xl px-2 sm:px-6 lg:px-8">
+      <div class="relative flex h-16 items-center justify-between">
+        <div class="mx-auto flex flex-1 items-center justify-center sm:items-stretch sm:justify-start">
+          <div class="flex flex-shrink-0 items-center">
+            <img class="hidden h-8 w-auto lg:block" src="./public/logo.png" alt="Your Company">
           </div>
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <!-- Mobile menu, show/hide based on menu state. -->
-  <div class="sm:hidden" id="mobile-menu">
-    <div class="space-y-1 px-2 pb-3 pt-2">
-      <!-- Current: "bg-gray-900 text-white", Default: "text-gray-300 hover:bg-gray-700 hover:text-white" -->
-      <a href="./index.html" class="bg-[#d9507e] text-white block rounded-md px-3 py-2 text-base font-medium" aria-current="page">Acceuil</a>
-      <a href="./materiaux.html" class="text-gray-300 hover:bg-[#d9507e] opacity-70 hover:text-white block rounded-md px-3 py-2 text-base font-medium">Matériaux</a>
-      <a href="./deroulement.html" class="text-gray-300 hover:bg-[#d9507e] opacity-70 hover:text-white block rounded-md px-3 py-2 text-base font-medium">Déroulement</a>
-      <a href="./realisation.html" class="text-gray-300 hover:bg-[#d9507e] opacity-70 hover:text-white block rounded-md px-3 py-2 text-base font-medium">Réalisations</a>
-      <a href="./entreprise.html" class="text-gray-300 hover:bg-[#d9507e] opacity-70 hover:text-white block rounded-md px-3 py-2 text-base font-medium">L'entreprise</a>
-      <a href="./contact.html" class="text-gray-300 hover:bg-[#d9507e] opacity-70 hover:text-white block rounded-md px-3 py-2 text-base font-medium">Contact</a>
-      <a href="./boutique.html" class="text-gray-300 hover:bg-[#d9507e] opacity-70 hover:text-white block rounded-md px-3 py-2 text-base font-medium">Boutique</a>
-    </div>
-  </div>
-</nav>
+          <div class="mx-auto hidden sm:ml-6 sm:block mb-100">
+            <div class="mx-auto space-x-4">
+              <a href="./index.html" class="bg-[#d9507e] text-white rounded-md px-3 py-2 text-sm font-medium" aria-current="page">Acceuil</a>
+              <a href="./materiaux.html" class="text-gray-400 hover:bg-[#d9507e] opacity-70 hover:text-white rounded-md px-3 py-2 text-sm font-medium">Matériaux</a>
+              <a href="./deroulement.html" class="text-gray-400 hover:bg-[#d9507e] opacity-70 hover:text-white rounded-md px-3 py-2 text-sm font-medium">Déroulement</a>
+              <a href="./realisation.html" class="text-gray-400 hover:bg-[#d9507e] opacity-70 hover:text-white rounded-md px-3 py-2 text-sm font-medium">Réalisations</a>
+              <a href="./entreprise.html" class="text-gray-400 hover:bg-[#d9507e] opacity-70 hover:text-white rounded-md px-3 py-2 text-sm font-medium">L'entreprise</a>
+              <a href="./contact.html" class="text-gray-400 hover:bg-[#d9507e] opacity-70 hover:text-white rounded-md px-3 py-2 text-sm font-medium">Contact</a>
+              <a href="./boutique.html" class="text-gray-400 hover:bg-[#d9507e] opacity-70 hover:text-white rounded-md px-3 py-2 text-sm font-medium">Boutique</a>
+              </div>
+              </div>
+              <!-- Hamburger menu icon for small screens -->
+              <div class="sm:hidden absolute top-0 right-0 mt-4 mr-4">
+                <button id="mobile-menu-button" class="text-gray-400 hover:text-[#d9507e] focus:outline-none focus:text-[#d9507e]">
+                  <svg class="h-6 w-6" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16"></path>
+                  </svg>
+                </button>
+              </div>
+              </div>
+              </div>
+              <!-- Mobile menu, show/hide based on menu state -->
+              <div class="sm:hidden" id="mobile-menu">
+                <div class="px-2 pt-2 pb-3 space-y-1">
+                  <a href="./index.html" class="bg-[#d9507e] text-white block rounded-md px-3 py-2 text-base font-medium" aria-current="page">Acceuil</a>
+                  <a href="./materiaux.html" class="text-gray-300 hover:bg-[#d9507e] opacity-70 hover:text-white block rounded-md px-3 py-2 text-base font-medium">Matériaux</a>
+                  <a href="./deroulement.html" class="text-gray-300 hover:bg-[#d9507e] opacity-70 hover:text-white block rounded-md px-3 py-2 text-base font-medium">Déroulement</a>
+                  <a href="./realisation.html" class="text-gray-300 hover:bg-[#d9507e] opacity-70 hover:text-white block rounded-md px-3 py-2 text-base font-medium">Réalisations</a>
+                  <a href="./entreprise.html" class="text-gray-300 hover:bg-[#d9507e] opacity-70 hover:text-white block rounded-md px-3 py-2 text-base font-medium">L'entreprise</a>
+                  <a href="./contact.html" class="text-gray-300 hover:bg-[#d9507e] opacity-70 hover:text-white block rounded-md px-3 py-2 text-base font-medium">Contact</a>
+                  <a href="./boutique.html" class="text-gray-300 hover:bg-[#d9507e] opacity-70 hover:text-white block rounded-md px-3 py-2 text-base font-medium">Boutique</a>
+                </div>
+              </div>
+              </nav>
+              <script>
+                const mobileMenuButton = document.getElementById('mobile-menu-button');
+                const mobileMenu = document.getElementById('mobile-menu');
+                mobileMenuButton.addEventListener('click', () => {
+                mobileMenu.classList.toggle('hidden');
+                });
+              </script>              
 
   </body>
 </html>
