--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       </div>
       <span id="text-banniere" class="hidden lg:block text-[#d9507e] text-lg font-bold text-center">en plan de travail de cuisine</span>
     </div>
-  <nav class="bg-gray-100 flex flex-col items-center justify-center h-screen text-[#d9507e]">
+    <nav class="bg-gray-100 flex flex-col items-center justify-center h-screen text-[#d9507e]">
     <div class="max-w-7xl px-2 sm:px-6 lg:px-8">
       <div class="relative flex h-16 items-center justify-between">
         <div class="mx-auto flex flex-1 items-center justify-center sm:items-stretch sm:justify-start">
@@ -46,7 +46,7 @@
               </div>
               </div>
               <!-- Mobile menu, show/hide based on menu state -->
-              <div class="sm:hidden" id="mobile-menu">
+              <div class="sm:hidden hidden" id="mobile-menu">
                 <div class="px-2 pt-2 pb-3 space-y-1">
                   <a href="./index.html" class="bg-[#d9507e] text-white block rounded-md px-3 py-2 text-base font-medium" aria-current="page">Acceuil</a>
                   <a href="./materiaux.html" class="text-gray-300 hover:bg-[#d9507e] opacity-70 hover:text-white block rounded-md px-3 py-2 text-base font-medium">Matériaux</a>
@@ -59,10 +59,13 @@
               </div>
               </nav>
               <script>
-                const mobileMenuButton = document.getElementById('mobile-menu-button');
-                const mobileMenu = document.getElementById('mobile-menu');
-                mobileMenuButton.addEventListener('click', () => {
-                mobileMenu.classList.toggle('hidden');
+                document.addEventListener('DOMContentLoaded', function() {
+                  const mobileMenuButton = document.getElementById('mobile-menu-button');
+                  const mobileMenu = document.getElementById('mobile-menu');
+              
+                  mobileMenuButton.addEventListener('click', function() {
+                    mobileMenu.classList.toggle('hidden');
+                  });
                 });
               </script>              
 
