--- a/index.html
+++ b/index.html
@@ -65,10 +65,10 @@
               </div>
       </nav>
     <div>
-      <div id="accueil" class="section bg-gray-100 h-100 w-200">
+      <div id="accueil" class="section bg-gray-100 min-h-screen">
         <div class="slideshow-container relative">
           <div class="absolute inset-0 flex items-center justify-center bg-gray-100 bg-opacity-20 z-10">
-            <h2 class="text-[#3F4447] text-lg font-extrabold text-center underline decoration-[#d9507e] ">Lepage Stone votre spécialiste en plan de travail de cuisine dans le Grand-Est</h2>
+            <h2 class="text-[#3F4447] text-lg font-extrabold text-center underline decoration-[#d9507e]">Lepage Stone votre spécialiste en plan de travail de cuisine dans le Grand-Est</h2>
           </div>
           <img class="slide rounded-2xl mx-auto flex-auto hidden w-1/2 opacity-60" src="public/Dekton-Kelya-1200.jpg" alt="Dekton-Kelya-1200">
           <img class="slide rounded-2xl mx-auto flex-auto hidden w-1/2 opacity-60" src="public/Noir-fin-sat-1200.jpg" alt="Noir-fin-sat-1200">
@@ -76,6 +76,7 @@
           <img class="slide rounded-2xl mx-auto flex-auto hidden w-1/2 opacity-60" src="public/Aura-1200.jpg" alt="Aura-1200">
         </div>
       </div>
+      
       <script>
         document.addEventListener("DOMContentLoaded", function() {
           var slides = document.getElementsByClassName("slide");
