--- a/index.html
+++ b/index.html
@@ -67,16 +67,15 @@
     <div>
       <div id="accueil" class="section bg-gray-100 min-h-screen">
         <div class="slideshow-container relative">
-          <div class="absolute inset-0 flex items-center justify-center bg-gray-100 bg-opacity-20 z-10">
-            <h2 class="text-[#3F4447] text-lg font-extrabold text-center underline decoration-[#d9507e]">Lepage Stone votre spécialiste en plan de travail de cuisine dans le Grand-Est</h2>
+          <div class="absolute inset-0 flex items-center justify-center bg-gray-100 bg-opacity-40 z-10">
+            <h2 class="text-[#3F4447] text-lg font-extrabold text-center underline decoration-[#d9507e] sm:text-sm md:text-base lg:text-lg xl:text-xl">Lepage Stone votre spécialiste en plan de travail de cuisine dans le Grand-Est</h2>
           </div>
-          <img class="slide rounded-2xl mx-auto flex-auto hidden w-1/2 opacity-60" src="public/Dekton-Kelya-1200.jpg" alt="Dekton-Kelya-1200">
-          <img class="slide rounded-2xl mx-auto flex-auto hidden w-1/2 opacity-60" src="public/Noir-fin-sat-1200.jpg" alt="Noir-fin-sat-1200">
-          <img class="slide rounded-2xl mx-auto flex-auto hidden w-1/2 opacity-60" src="public/Noir-Virginia-Satine-1200.jpg" alt="Noir-Virginia-Satine-1200">
-          <img class="slide rounded-2xl mx-auto flex-auto hidden w-1/2 opacity-60" src="public/Aura-1200.jpg" alt="Aura-1200">
-        </div>
-      </div>
-      
+          <img class="slide rounded-2xl mx-auto flex-auto hidden w-2/3 opacity-80" src="public/Dekton-Kelya-1200.jpg" alt="Dekton-Kelya-1200">
+          <img class="slide rounded-2xl mx-auto flex-auto hidden w-2/3 opacity-80" src="public/Noir-fin-sat-1200.jpg" alt="Noir-fin-sat-1200">
+          <img class="slide rounded-2xl mx-auto flex-auto hidden w-2/3 opacity-80" src="public/Noir-Virginia-Satine-1200.jpg" alt="Noir-Virginia-Satine-1200">
+          <img class="slide rounded-2xl mx-auto flex-auto hidden w-2/3 opacity-80" src="public/Aura-1200.jpg" alt="Aura-1200">
+    </div>
+  </div>   
       <script>
         document.addEventListener("DOMContentLoaded", function() {
           var slides = document.getElementsByClassName("slide");
@@ -101,7 +100,7 @@
         });
       </script>
       
-        </div>
+  </div>
         <div class="fixed inset-x-0 bottom-0">
           <div class="bg-[#d9507e] px-4 py-3 text-white">
             <p class="text-center text-sm font-medium">
