Ajout du Announce mobil

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
       </script>
       
   </div>
-  <div class="fixed inset-x-0 bottom-0 opacity-100 mt-44 hidden sm:block">
+  <div class="fixed inset-x-0 bottom-0 opacity-100 mt-44">
     <div class="bg-[#d9507e] px-4 py-3 text-white">
       <p class="text-center text-sm font-medium">
         2 ter rue Denis Papin • 54300 CHANTEHEUX (à côté de Lunéville) • info@lepage-stone.fr • Tél : 03 83 74 07 17
@@ -111,6 +111,7 @@
       </p>
     </div>
   </div>
+  
   
   
               <script>
