--- a/materiaux.html
+++ b/materiaux.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="./CSS/output.css">
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
-  <body>
+  <body class="bg-gray-100">
     <!-- banniere -->
     <div class="flex flex-auto bg-gray-100 text-[#d9507e] mx-auto items-center justify-center">
       <span id="text-banniere" class="hidden lg:flex text-[#d9507e] text-lg font-bold text-center self-center">Votre spécialiste Grand-est</span>
@@ -30,7 +30,7 @@
           <div class="flex flex-shrink-0 items-center">
             <img class="hidden h-8 w-auto lg:block" src="./public/logo.png" alt="Your Company">
           </div>
-          <div class="mx-auto hidden sm:ml-6 sm:block mb-100">
+          <div class="mx-auto hidden sm:ml-7 sm:block mb-100">
             <div class="mx-auto space-x-4">
               <a href="./index.html" class="text-gray-400 hover:bg-[#d9507e] opacity-70 hover:text-white rounded-md px-3 py-2 text-sm font-medium">Acceuil</a>
               <a href="./materiaux.html" class="bg-[#d9507e] text-white rounded-md px-3 py-2 text-sm font-medium" aria-current="page">Matériaux</a>
@@ -64,6 +64,36 @@
                 </div>
               </div>
       </nav>
+      <div class="h-auto w-auto items-center">
+  <div class="grid flex-auto sm:grid-cols-1 md:grid-cols-2 lg:grid-cols-4 xl:grid-cols-4 gap-5 justify-center items-center">
+    <a href="#!" data-te-ripple-init class="mx-auto flex flex-col items-center justify-center">
+      <img src="./public/céramique.jpg" class="object-contain w-full h-full mx-auto" alt="céramique" />
+      <div class="flex text-[#d9507e] text-lg font-bold text-center self-center underline decoration-[#3E4347]">Céramique</div>
+    </a>
+    <a href="#!" data-te-ripple-init class="mx-auto flex flex-col items-center justify-center">
+      <img src="./public/granit.jpg" class="object-contain w-full h-full mx-auto" alt="granit" />
+      <div class="flex text-[#d9507e] text-lg font-bold text-center self-center underline decoration-[#3E4347]">Granit</div>
+    </a>
+    <a href="#!" data-te-ripple-init class="mx-auto flex flex-col items-center justify-center">
+      <img src="./public/dekton.jpg" class="object-contain w-full h-full mx-auto" alt="dekton" />
+      <div class="flex text-[#d9507e] text-lg font-bold text-center self-center underline decoration-[#3E4347]">Dekton</div>
+    </a>
+    <a href="#!" data-te-ripple-init class="mx-auto flex flex-col items-center justify-center">
+      <img src="./public/quartz.jpg" class="object-contain w-full h-full mx-auto" alt="quartz" />
+      <div class="flex text-[#d9507e] text-lg font-bold text-center self-center underline decoration-[#3E4347]">Quartz</div>
+    </a>
+  </div>
+</div>
+<div class="fixed inset-x-0 bottom-0 opacity-100 mt-44">
+  <div class="bg-[#d9507e] px-4 py-3 text-white">
+    <p class="text-center text-sm font-medium">
+      2 ter rue Denis Papin • 54300 CHANTEHEUX (à côté de Lunéville) • info@lepage-stone.fr • Tél : 03 83 74 07 17
+      <a href="#" class="inline-block underline">
+        <!--rajouter les mentions-->
+      </a>
+    </p>
+  </div>
+</div>
               <script>
                 document.addEventListener('DOMContentLoaded', function() {
                   const mobileMenuButton = document.getElementById('mobile-menu-button');
