Ajout des pages quartz cera. et dekton

--- a/materiaux.html
+++ b/materiaux.html
@@ -66,11 +66,11 @@
       </nav>
       <div class="h-auto w-auto items-center">
   <div class="grid flex-auto sm:grid-cols-1 md:grid-cols-2 lg:grid-cols-4 xl:grid-cols-4 gap-5 justify-center items-center">
-    <a href="#!" data-te-ripple-init class="mx-auto flex flex-col items-center justify-center">
+    <a href="" data-te-ripple-init class="mx-auto flex flex-col items-center justify-center">
       <img src="./public/céramique.jpg" class="object-contain w-full h-full mx-auto" alt="céramique" />
       <div class="flex text-[#d9507e] text-lg font-bold text-center self-center underline decoration-[#3E4347]">Céramique</div>
     </a>
-    <a href="#!" data-te-ripple-init class="mx-auto flex flex-col items-center justify-center">
+    <a href="granit.html" data-te-ripple-init class="mx-auto flex flex-col items-center justify-center">
       <img src="./public/granit.jpg" class="object-contain w-full h-full mx-auto" alt="granit" />
       <div class="flex text-[#d9507e] text-lg font-bold text-center self-center underline decoration-[#3E4347]">Granit</div>
     </a>
