Ajout des caractéristique GGranit Céra

--- a/ceramique.html
+++ b/ceramique.html
@@ -64,8 +64,34 @@
                 </div>
               </div>
       </nav>
+      <div class="mt-10">
+        <h1 class="text-center text-[#d9507e] text-2xl font-bold">La céramique</h1>
+      </div>
+      <div class="bg-gray-100 justify-center items-center mt-8 flex-auto">
+        <div class="flex flex-col-reverse sm:flex-row text-white flex-auto justify-center">
+          <div class="bg-[#d9507e] mr-5 sm:mr-0 sm:w-1/2 md:w-1/4 md:h-2/3 lg:w-2/12 transform -rotate-3 h-auto">
+            <h1 class="flex flex-auto justify-center items-center mx-auto text-center text-lg mb-5">Caractéristiques</h1>
+            <ul class="list-disc list-inside">
+              <li class="ml-3 text-sm">Surface compacte frittée</li>
+              <li class="ml-3 text-sm">Épaisseur : 1.2cm</li>
+              <li class="ml-3 text-sm">Dimensions des tranches : 3200x1500mm</li>
+              <li class="ml-3 text-sm">Forte résistance à la chaleur, aux rayures et aux UV</li>
+              <li class="ml-3 text-sm">Pas d’entretien</li>
+            </ul>
+          </div>
       
-      <div class="grid grid-cols-6 gap-5 p-10 justify-center">
+          <div class="sm:w-2/3 flex justify-center items-center bg-gray-100 ml-5 mr-5 mx-auto">
+            <div class="text-left text-[#3E4347] text-justify">
+              <p class="mb-2">Dernière arrivée des plans de travail de cuisine, la céramique est un matériau naturel, composé de minéraux issus du granit, du verre, de silice et d’oxydes naturels. C’est une surface compacte frittée. La cuisson de l’ensemble dans un four à 1200°C permet d’obtenir une surface compacte et pleine masse ayant une coloration uniforme.</p>
+              <p class="mb-2">Ce matériau possède une très forte résistance à la chaleur, aux rayures et n’est pas sensible aux UV. Il est également peu poreux et résiste fortement aux acides. Pas d’entretien à prévoir.</p>
+              <p class="mb-2">Avec la céramique vous pouvez laisser libre court à votre imagination pour la conception de votre plan de travail.</p>
+              <p>La céramique se travaille en plan « ultra slim » de 1.2cm d’épaisseur, style épuré et moderne garanti.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="grid grid-cols-6 gap-7 p-10 justify-center">
         <div class="col-span-6 mt-5 bg-opacity-50 border border-gray-100 rounded shadow-lg bg-gradient-to-b from-gray-200 backdrop-blur-20 to-gray-50 md:col-span-3 lg:col-span-2">
           <div class="flex flex-row justify-center px-2 py-3 mx-3">
             <div class="flex flex-col mt-1 mb-2 ml-4 text-center">
