--- a/granit.html
+++ b/granit.html
@@ -42,7 +42,7 @@
               </div>
               </div>
               <!-- Hamburger menu-->
-              <div class="sm:hidden absolute top-0 right-0 mt-1 mr-1 mx-auto">
+              <div class="sm:hidden absolute top-0 right-0 mt-1 mr-1 mx-auto justify-center items-center">
                 <button id="mobile-menu-button" class="text-gray-500 hover:text-[#d9507e] focus:outline-none focus:text-[#d9507e]">
                   <svg class="h-8 w-8" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16"></path>
@@ -63,7 +63,33 @@
                   <a href="./boutique.html" class="text-gray-300 hover:bg-[#d9507e] opacity-70 hover:text-white block rounded-md px-3 py-2 text-base font-medium">Boutique</a>
                 </div>
               </div>
-      </nav>
+      </nav> 
+      <div class="mt-10">
+        <h1 class="text-center text-[#d9507e] text-2xl font-bold">Le Granit</h1>
+      </div>
+      <div class="bg-gray-100 justify-center items-center mt-8 flex-auto">
+        <div class="flex flex-col-reverse sm:flex-row text-white flex-auto justify-center">
+          <div class="bg-[#d9507e] mr-5 sm:mr-0 sm:w-1/2 md:w-1/4 md:h-2/3 lg:w-2/12 transform -rotate-3 h-auto">
+            <h1 class="flex flex-auto justify-center items-center mx-auto text-center text-lg mb-5">Caractéristiques</h1>
+            <ul class="list-disc list-inside">
+              <li class="ml-3 text-sm">Matériau 100% naturel et unique</li>
+              <li class="ml-3 text-sm">Epaisseur : 2cm, 3cm</li>
+              <li class="ml-3 text-sm">Dimension moyenne des tranches : 2900x1500mm</li>
+              <li class="ml-3 text-sm">Forte résistance à la chaleur et aux égratignures</li>
+              <li class="ml-3 text-sm">Peu d’entretien</li>
+            </ul>
+          </div>
+      
+          <div class="sm:w-2/3 flex justify-center items-center bg-gray-100 ml-5 mr-5 mx-auto">
+            <div class="text-left text-[#3E4347] text-justify">
+              <p class="mb-2">Un peu d’histoire …, c’est une roche cristalline formée d’un assemblage de cristaux de feldspath, de quartz et de mica. Il provient du refroidissement et de la cristallisation lente du magma dans les profondeurs de la terre.</p>
+              <p class="mb-2">Matériau noble et élégant par nature, il provient de pays tels que le Brésil, l’Afrique du Sud, l’Inde, … Les minéraux et veinages de ce matériau font de votre cuisine un espace unique qui vous ressemble. C’est une des pierres les plus dures qui existe, d’absorption quasi nulle. Sa durée de vie est bien supérieure à la plupart des autres matériaux utilisés pour les plans de travail de cuisine.</p>
+              <p>C’est un matériau qui résiste fortement aux égratignures et à la chaleur. Nous vous conseillons toutefois l’utilisation d’un dessous-de-plat pour les plats brûlants, afin d’éviter les chocs thermiques.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+      
       <div class="grid grid-cols-6 gap-5 p-10">
         <div class="col-span-6 mt-5 bg-opacity-50 border border-gray-100 rounded shadow-lg cursor-pointer bg-gradient-to-b from-gray-200 backdrop-blur-20 to-gray-50 md:col-span-3 lg:col-span-2">
           <div class="flex flex-row justify-center px-2 py-3 mx-3">
