--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
               </div>
               </div>
               <!-- Hamburger menu-->
-              <div class="sm:hidden absolute top-0 right-0 mt-1 mr-1 mx-auto">
+              <div class="sm:hidden absolute top-0 right-0 mt-1 mr-1 mx-auto justify-center items-center">
                 <button id="mobile-menu-button" class="text-gray-500 hover:text-[#d9507e] focus:outline-none focus:text-[#d9507e]">
                   <svg class="h-8 w-8" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16"></path>
@@ -66,7 +66,7 @@
       </nav>
       <div>
         <div id="accueil" class="section bg-gray-100 min-h-auto mb-20">
-          <h2 class="text-[#3F4447] text-lg font-extrabold text-center underline decoration-[#d9507e] sm:text-sm md:text-base lg:text-lg xl:text-xl">Lepage Stone votre spécialiste en plan de travail de cuisine dans le Grand-Est</h2>
+          <h2 class="text-[#3F4447] text-lg font-extrabold text-center underline decoration-[#d9507e] mb-6 sm:text-sm md:text-base lg:text-lg xl:text-xl">Lepage Stone votre spécialiste en plan de travail de cuisine dans le Grand-Est</h2>
           <div class="slideshow-container relative">
             <div class="absolute inset-0 flex items-center justify-center bg-opacity-100 z-10">
             </div>
