--- a/dekton.html
+++ b/dekton.html
@@ -32,7 +32,7 @@
           </div>
           <div class="mx-auto hidden sm:ml-6 sm:block mb-100">
             <div class="mx-auto space-x-4">
-              <a href="./index.html" class="text-[#d9507e] hover:bg-[#d9507e] opacity-70 hover:text-white rounded-md px-3 py-2 text-sm font-medium">Acceuil</a>
+              <a href="./index.html" class="text-[#d9507e] hover:bg-[#d9507e] opacity-70 hover:text-white rounded-md px-3 py-2 text-sm font-medium">Accueil</a>
               <a href="./materiaux.html" class="bg-[#d9507e] text-white rounded-md px-3 py-2 text-sm font-medium" aria-current="page">Matériaux</a>
               <a href="./deroulement.html" class="text-[#d9507e] hover:bg-[#d9507e] opacity-70 hover:text-white rounded-md px-3 py-2 text-sm font-medium">Déroulement</a>
               <a href="./realisation.html" class="text-[#d9507e] hover:bg-[#d9507e] opacity-70 hover:text-white rounded-md px-3 py-2 text-sm font-medium">Réalisations</a>
@@ -54,7 +54,7 @@
               <!-- Mobile menu-->
               <div class="sm:hidden hidden" id="mobile-menu">
                 <div class="px-2 pt-2 pb-3 space-y-1">
-                  <a href="./index.html" class="text-gray-300 hover:bg-[#d9507e] opacity-70 hover:text-white block rounded-md px-3 py-2 text-base font-medium">Acceuil</a>
+                  <a href="./index.html" class="text-gray-300 hover:bg-[#d9507e] opacity-70 hover:text-white block rounded-md px-3 py-2 text-base font-medium">Accueil</a>
                   <a href="./materiaux.html" class="bg-[#d9507e] text-white block rounded-md px-3 py-2 text-base font-medium" aria-current="page">Matériaux</a>
                   <a href="./deroulement.html" class="text-gray-300 hover:bg-[#d9507e] opacity-70 hover:text-white block rounded-md px-3 py-2 text-base font-medium">Déroulement</a>
                   <a href="./realisation.html" class="text-gray-300 hover:bg-[#d9507e] opacity-70 hover:text-white block rounded-md px-3 py-2 text-base font-medium">Réalisations</a>
@@ -72,9 +72,9 @@
           <div class="bg-[#d9507e] mr-5 sm:mr-0 sm:w-1/2 md:w-1/4 md:h-2/3 lg:w-2/12 transform -rotate-3 h-auto">
             <h1 class="flex flex-auto justify-center items-center mx-auto text-center text-lg mb-5">Caractéristiques</h1>
             <ul class="list-disc list-inside">
-              <li class="ml-3 text-sm">Surface compacte frittée</li>
-              <li class="ml-3 text-sm">Épaisseur : 1.2cm</li>
-              <li class="ml-3 text-sm">Dimensions des tranches : 3200x1500mm</li>
+              <li class="ml-3 text-sm">Surface frittée et ultra compacte</li>
+              <li class="ml-3 text-sm">Epaisseur : 1.2cm, 2cm</li>
+              <li class="ml-3 text-sm">Dimensions des tranches : env. 3200x1400mm</li>
               <li class="ml-3 text-sm">Forte résistance à la chaleur, aux rayures et aux UV</li>
               <li class="ml-3 text-sm">Pas d’entretien</li>
             </ul>
@@ -82,10 +82,11 @@
       
           <div class="sm:w-2/3 flex justify-center items-center bg-gray-100 ml-5 mr-5 mx-auto">
             <div class="text-left text-[#3E4347] text-justify">
-              <p class="mb-2">Dernière arrivée des plans de travail de cuisine, la céramique est un matériau naturel, composé de minéraux issus du granit, du verre, de silice et d’oxydes naturels. C’est une surface compacte frittée. La cuisson de l’ensemble dans un four à 1200°C permet d’obtenir une surface compacte et pleine masse ayant une coloration uniforme.</p>
-              <p class="mb-2">Ce matériau possède une très forte résistance à la chaleur, aux rayures et n’est pas sensible aux UV. Il est également peu poreux et résiste fortement aux acides. Pas d’entretien à prévoir.</p>
-              <p class="mb-2">Avec la céramique vous pouvez laisser libre court à votre imagination pour la conception de votre plan de travail.</p>
-              <p>La céramique se travaille en plan « ultra slim » de 1.2cm d’épaisseur, style épuré et moderne garanti.</p>
+              <p class="mb-2">Dekton est un mélange sophistiqué de matières premières utilisées pour fabriquer les derniers matériaux en verre et en porcelaine ainsi que les surfaces de travail en quartz de la plus haute qualité.</p>
+              <p class="mb-2">Ce matériau possède une très forte résistance à la chaleur, aux rayures et n’est pas sensible aux UV. Il est également peu poreux et résiste fortement aux acides.</p>
+              <p class="mb-2">D’épaisseur fine, le plan de travail Dekton fait 1.2cm ou 2cm.</p>
+              <p class="mb-2">Aujourd’hui, Dekton propose pas moins de 34 coloris allant du blanc pur, à l’imitation marbre.</p>
+              <p>Son coût se rapproche de celui de la céramique, il ne nécessite aucun entretien.</p>
             </div>
           </div>
         </div>
