--- a/granit.html
+++ b/granit.html
@@ -32,7 +32,7 @@
           </div>
           <div class="mx-auto hidden sm:ml-6 sm:block mb-100">
             <div class="mx-auto space-x-4">
-              <a href="./index.html" class="text-[#d9507e] hover:bg-[#d9507e] opacity-70 hover:text-white rounded-md px-3 py-2 text-sm font-medium">Acceuil</a>
+              <a href="./index.html" class="text-[#d9507e] hover:bg-[#d9507e] opacity-70 hover:text-white rounded-md px-3 py-2 text-sm font-medium">Accueil</a>
               <a href="./materiaux.html" class="bg-[#d9507e] text-white rounded-md px-3 py-2 text-sm font-medium" aria-current="page">Matériaux</a>
               <a href="./deroulement.html" class="text-[#d9507e] hover:bg-[#d9507e] opacity-70 hover:text-white rounded-md px-3 py-2 text-sm font-medium">Déroulement</a>
               <a href="./realisation.html" class="text-[#d9507e] hover:bg-[#d9507e] opacity-70 hover:text-white rounded-md px-3 py-2 text-sm font-medium">Réalisations</a>
@@ -54,7 +54,7 @@
               <!-- Mobile menu-->
               <div class="sm:hidden hidden" id="mobile-menu">
                 <div class="px-2 pt-2 pb-3 space-y-1">
-                  <a href="./index.html" class="text-gray-300 hover:bg-[#d9507e] opacity-70 hover:text-white block rounded-md px-3 py-2 text-base font-medium">Acceuil</a>
+                  <a href="./index.html" class="text-gray-300 hover:bg-[#d9507e] opacity-70 hover:text-white block rounded-md px-3 py-2 text-base font-medium">Accueil</a>
                   <a href="./materiaux.html" class="bg-[#d9507e] text-white block rounded-md px-3 py-2 text-base font-medium" aria-current="page">Matériaux</a>
                   <a href="./deroulement.html" class="text-gray-300 hover:bg-[#d9507e] opacity-70 hover:text-white block rounded-md px-3 py-2 text-base font-medium">Déroulement</a>
                   <a href="./realisation.html" class="text-gray-300 hover:bg-[#d9507e] opacity-70 hover:text-white block rounded-md px-3 py-2 text-base font-medium">Réalisations</a>
@@ -69,7 +69,7 @@
       </div>
       <div class="bg-gray-100 justify-center items-center mt-8 flex-auto">
         <div class="flex flex-col-reverse sm:flex-row text-white flex-auto justify-center">
-          <div class="bg-[#d9507e] mr-5 sm:mr-0 sm:w-1/2 md:w-1/4 md:h-2/3 lg:w-2/12 transform -rotate-3 h-auto">
+          <div class="bg-[#d9507e] mr-5 sm:mr-0 sm:w-1/2 md:w-1/4 md:h-2/3 lg:w-2/12 transform -rotate-3 h-auto drop-shadow-md">
             <h1 class="flex flex-auto justify-center items-center mx-auto text-center text-lg mb-5">Caractéristiques</h1>
             <ul class="list-disc list-inside">
               <li class="ml-3 text-sm">Matériau 100% naturel et unique</li>
