ajoute de l'element animate bounce menu

--- a/boutique.html
+++ b/boutique.html
@@ -38,7 +38,7 @@
               <a href="./realisation.html" class="text-gray-400 hover:bg-[#d9507e] opacity-70 hover:text-white rounded-md px-3 py-2 text-sm font-medium">Réalisations</a>
               <a href="./entreprise.html" class="text-gray-400 hover:bg-[#d9507e] opacity-70 hover:text-white rounded-md px-3 py-2 text-sm font-medium">L'entreprise</a>
               <a href="./contact.html" class="text-gray-400 hover:bg-[#d9507e] opacity-70 hover:text-white rounded-md px-3 py-2 text-sm font-medium">Contact</a>
-              <a href="./boutique.html" class="bg-[#d9507e] text-white rounded-md px-3 py-2 text-sm font-medium" aria-current="page">Boutique</a>
+              <a href="./boutique.html" class="bg-[#d9507e] text-white rounded-md px-3 py-2 text-sm font-medium animate-pulse" aria-current="page">Boutique</a>
               </div>
               </div>
               <!-- Hamburger menu-->
