--- a/contact.html
+++ b/contact.html
@@ -37,7 +37,7 @@
               <a href="./deroulement.html" class="text-gray-400 hover:bg-[#d9507e] opacity-70 hover:text-white rounded-md px-3 py-2 text-sm font-medium">Déroulement</a>
               <a href="./realisation.html" class="text-gray-400 hover:bg-[#d9507e] opacity-70 hover:text-white rounded-md px-3 py-2 text-sm font-medium">Réalisations</a>
               <a href="./entreprise.html" class="text-gray-400 hover:bg-[#d9507e] opacity-70 hover:text-white rounded-md px-3 py-2 text-sm font-medium">L'entreprise</a>
-              <a href="./contact.html" class="bg-[#d9507e] text-white rounded-md px-3 py-2 text-sm font-medium" aria-current="page">Contact</a>
+              <a href="./contact.html" class="bg-[#d9507e] text-white rounded-md px-3 py-2 text-sm font-medium animate-pulse" aria-current="page">Contact</a>
               <a href="./boutique.html" class="text-gray-400 hover:bg-[#d9507e] opacity-70 hover:text-white rounded-md px-3 py-2 text-sm font-medium">Boutique</a>
               </div>
               </div>
