--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="flex flex-auto bg-gray-100 text-[#d9507e] mx-auto items-center justify-center">
       <span id="text-banniere" class="hidden lg:flex text-[#d9507e] text-lg font-bold text-center self-center">Votre spécialiste Grand-est</span>
       <div class="flex items-center justify-center">
-        <img class="h-auto max-w-full sm:max-w-xs md:max-w-sm lg:max-w-md" src="./public/logo.png" alt="Logo">
+        <img class="h-auto max-w-full  sm:max-w-xs md:max-w-sm lg:max-w-md" src="./public/logo.png" alt="Logo">
         <span id="text-banniere" class="hidden lg:flex text-[#d9507e] text-lg font-bold text-center self-center">en plan de travail de cuisine</span>
       </div>
     </div>
@@ -32,7 +32,7 @@
           </div>
           <div class="mx-auto hidden sm:ml-6 sm:block mb-100">
             <div class="mx-auto space-x-4">
-              <a href="./index.html" class="bg-[#d9507e] text-white rounded-md px-3 py-2 text-sm font-medium" aria-current="page">Accueil</a>
+              <a href="./index.html" class="bg-[#d9507e] text-white rounded-md px-3 py-2 text-sm font-medium animate-pulse" aria-current="page">Accueil</a>
               <a href="./materiaux.html" class="text-gray-400 hover:bg-[#d9507e] opacity-70 hover:text-white rounded-md px-3 py-2 text-sm font-medium">Matériaux</a>
               <a href="./deroulement.html" class="text-gray-400 hover:bg-[#d9507e] opacity-70 hover:text-white rounded-md px-3 py-2 text-sm font-medium">Déroulement</a>
               <a href="./realisation.html" class="text-gray-400 hover:bg-[#d9507e] opacity-70 hover:text-white rounded-md px-3 py-2 text-sm font-medium">Réalisations</a>
