--- a/dekton.html
+++ b/dekton.html
@@ -33,7 +33,7 @@
           <div class="mx-auto hidden sm:ml-6 sm:block mb-100">
             <div class="mx-auto space-x-4">
               <a href="./index.html" class="text-[#d9507e] hover:bg-[#d9507e] opacity-70 hover:text-white rounded-md px-3 py-2 text-sm font-medium">Accueil</a>
-              <a href="./materiaux.html" class="bg-[#d9507e] text-white rounded-md px-3 py-2 text-sm font-medium" aria-current="page">Matériaux</a>
+              <a href="./materiaux.html" class="bg-[#d9507e] text-white rounded-md px-3 py-2 text-sm font-medium animate-pulse" aria-current="page">Matériaux</a>
               <a href="./deroulement.html" class="text-[#d9507e] hover:bg-[#d9507e] opacity-70 hover:text-white rounded-md px-3 py-2 text-sm font-medium">Déroulement</a>
               <a href="./realisation.html" class="text-[#d9507e] hover:bg-[#d9507e] opacity-70 hover:text-white rounded-md px-3 py-2 text-sm font-medium">Réalisations</a>
               <a href="./entreprise.html" class="text-[#d9507e] hover:bg-[#d9507e] opacity-70 hover:text-white rounded-md px-3 py-2 text-sm font-medium">L'entreprise</a>
